--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ const priorityOrder = {
   low: 3,
 };
 
-// tri + limitation à 6
+// tri + limitation à 4 projets
 const projects = [...allProjects]
   .sort((a, b) => priorityOrder[a.priority] - priorityOrder[b.priority])
   .slice(0, 4);
@@ -27,7 +27,7 @@ const projects = [...allProjects]
 <BaseLayout>
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-20">
     <!-- Hero Section -->
-    <div class="min-h-screen h-screen text-center justify-items-center mb-20">
+    <div class="max-h-screen h-screen text-center grid place-items-center gap-6 mb-20">
       <Image
         src={portrait}
         alt="Portrait d'Isabelle"
@@ -57,7 +57,7 @@ const projects = [...allProjects]
     </div>
 
     <!-- Sections -->
-    <div class="space-y-20">
+    <div class="space-y-20 flex flex-col items-center w-full">
       <section id="about">
         <div class="text-center font-medium">
           <h2 class="text-4xl font-bold mb-4">A propos de moi</h2>
@@ -111,62 +111,17 @@ const projects = [...allProjects]
           </div>
         </div>
       </section>
+
       <section id="certifications" class="flex flex-col justify-center items-center gap-8">
         <div class="text-center">
           <h2 class="text-4xl font-bold mb-4">Certifications</h2>
-           <!-- <div
-              class="flip-card 
-              w-full max-w-[90%]
-              sm:max-w-[32rem]
-              md:max-w-[24rem]
-              lg:max-w-[26rem]
-              relative
-              h-[22rem] sm:h-[26rem] md:h-[26rem] lg:h-[28rem]"
-            data-aos="flip-left"
-            data-aos-easing="ease-out-cubic"
-            data-aos-duration="2000"
-            >
-            <div class="flip-inner"> -->
-
-              <!-- FACE AVANT -->
-              <!-- <div class="flip-front rounded-xl glass p-4 flex flex-col items-center justify-start shadow-lg h-full overflow-hidden">
-                <Image
-                  src="https://res.cloudinary.com/isabellelamarre/image/upload/v1756411717/mes-projets/Concepteur-D%C3%A9veloppeur%20d%27Applications%20Web%20et%20Mobile/Titre%20RNCP/La%20Capsule/15-04-2025/aytjkvzudyotfqlqh4xf.png"
-                  alt="Certification RNCP de Concepteur Développeur d'applications Web et Mobile"
-                  width={450}
-                  height={450}
-                  class="w-full h-auto max-h-[55%] object-contain mb-2"
-                  loading="lazy"
-                />
-                <h3 class="text-xl font-bold mb-1">Titre RNCP</h3>
-                <p class="text-sm opacity-80">Concepteur Développeur d'applications Web & Mobile</p>
-                <p class="text-xs mt-1">Émis par : La Capsule</p>
-              </div> -->
-
-              <!-- FACE ARRIÈRE -->
-              <!-- <div class="flip-back rounded-xl glass p-4 flex flex-col justify-start shadow-lg h-full overflow-y-auto">
-                <h3 class="text-lg font-semibold mb-2">
-                  Compétences acquises
-                </h3>
-                <ol class="text-sm text-left list-decimal space-y-1">
-                  <li>Conception et maquettage d’une application web & mobile</li>
-                  <li>Pilotage d’un projet d’application web & mobile</li>
-                  <li>Manipulation et sécurisation d’une base de données</li>
-                  <li>Développement d’application web & mobile</li>
-                  <li>Mise en production</li>
-                </ol>
-                <p class="text-xs mt-4">Date d'émission : 15/04/2025</p>
-              </div>
-
-            </div>
-          </div> -->
- <div class="flex flex-col md:flex-row justify-center items-center gap-10">
-      {certifications.map((cert) => (
-        <CertificationCard cert={cert} />
-      ))}
-    </div>
-  </div>
-</section>
+          <div class="flex flex-col lg:flex-row justify-center items-center gap-10">
+                {certifications.map((cert) => (
+                  <CertificationCard cert={cert} />
+                ))}
+          </div>
+        </div>
+      </section>
 
       <section id="technos">
         <div class="text-center">
@@ -216,7 +171,7 @@ const projects = [...allProjects]
 
             <div class="text-center flex flex-col items-center">
               <div class="flex flex-col m-8">
-                <a class="text-2xl p-3"
+                <a class="md:text-2xl text-xl p-3"
                   href="mailto:lalicornecosmique62@gmail.com?subject=Contact depuis le site&body=Bonjour%20Isabelle,"
                   aria-label="lalicornecosmique62@gmail.com"
                   data-aos="zoom-in-up" data-aos-duration="1200">
@@ -260,6 +215,7 @@ const projects = [...allProjects]
           </div>
         </div>
       </section>
+
     </div>
   </div>
 </BaseLayout>
