--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,9 +25,9 @@ const projects = [...allProjects]
 ---
 
 <BaseLayout>
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-20">
+  <div class="max-w-7xl mx-2 px-4 sm:px-4 lg:px-6 py-12">
     <!-- Hero Section -->
-    <div class="max-h-screen h-screen text-center grid place-items-center gap-6 mb-20">
+    <div class="max-h-screen h-screen text-center grid items-center gap-4 mb-20">
       <Image
         src={portrait}
         alt="Portrait d'Isabelle"
@@ -63,7 +63,7 @@ const projects = [...allProjects]
           <h2 class="text-4xl font-bold mb-4">A propos de moi</h2>
           
           <div class="flex flex-col justify-center items-center mt-8 space-y-6">
-            <div class="grid grid-cols-1 md:grid-cols-2 justify-center items-center gap-10">
+            <div class="grid grid-cols-1 lg:grid-cols-2 justify-center items-center gap-10">
               <Image
                 src={portrait2}
                 alt="Portrait d'Isabelle a son set-up de travail"
@@ -112,7 +112,7 @@ const projects = [...allProjects]
         </div>
       </section>
 
-      <section id="certifications" class="flex flex-col justify-center items-center gap-8">
+      <section id="certifications" class="flex flex-col justify-normal min-h-screen items-center gap-8">
         <div class="text-center">
           <h2 class="text-4xl font-bold mb-4">Certifications</h2>
           <div class="flex flex-col lg:flex-row justify-center items-center gap-10">
