--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -123,6 +123,20 @@ section {
   margin-inline: auto;
 }
 
+section > * {
+  width: 100%;
+  max-width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.section-inner {
+  width: 100%;
+  max-width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 
 
 /* Light mode */
