encore un essai de centrage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ const projects = [...allProjects]
 ---
 
 <BaseLayout>
-  <div class="max-w-7xl mx-2 px-4 sm:px-4 lg:px-6 py-12">
+  <div class="max-w-7xl w-full mx-auto px-4 sm:px-6 lg:px-8 flex flex-col items-center py-12">
     <!-- Hero Section -->
     <div class="max-h-screen h-screen section-inner text-center grid items-center gap-4 mb-16">
       <Image
@@ -57,7 +57,7 @@ const projects = [...allProjects]
     </div>
 
     <!-- Sections -->
-    <div class="space-y-20 flex flex-col items-center w-full">
+    <div class="space-y-20 flex flex-col items-stretch w-full max-w-6xl mx-auto">
       <section id="about">
         <div class="text-center section-inner">
           <h2 class="text-4xl font-bold mb-4">A propos de moi</h2>
@@ -167,10 +167,10 @@ const projects = [...allProjects]
             Contacts
           </h2>
 
-          <div class="flex flex-col xl2:flex-row m-8 justify-center items-center xl2:items-stretch gap-10 xl2:gap-20 w-full">
+          <div class="flex flex-col xl2:flex-row my-8 justify-center items-center xl2:items-stretch gap-10 xl2:gap-20 w-full">
 
             <div class="text-center flex flex-col items-center">
-              <div class="flex flex-col m-8">
+              <div class="flex flex-col mt-8 gap-3">
                 <a class="md:text-2xl text-xl p-3"
                   href="mailto:lalicornecosmique62@gmail.com?subject=Contact depuis le site&body=Bonjour%20Isabelle,"
                   aria-label="lalicornecosmique62@gmail.com"
@@ -215,7 +215,5 @@ const projects = [...allProjects]
           </div>
         </div>
       </section>
-
-    </div>
   </div>
 </BaseLayout>
